--- a/webpage/src/pages/_Projects.scss
+++ b/webpage/src/pages/_Projects.scss
@@ -44,7 +44,7 @@
     transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover:not(.projects-page__filter-btn--active) {
-      background: var(--label-color);
+      background: var(--tertiary-color);
       color: var(--white-color);
     }
 
